<?xml version="1.0"?>
<package format="2">
    <name>dreamer_controlit_demos</name>

    <version>0.0.0</version>

    <description>
        Contains applications of Dreamer when it is being controlled by ControlIt!
    </description>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>LGPLv2.1</license>

    <maintainer email="liangfok@utexas.edu">Chien-Liang Fok</maintainer>

    <author>Chien-Liang Fok</author>

    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>

    <depend>catkin</depend>
    <depend>geometry_msgs</depend>
    <depend>controlit_cmake</depend>
    <depend>controlit_trajectory_generators</depend>
    <depend>interactive_markers</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>

</package>
